11-kubernetes/service_wcg.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcg-service
spec:
  selector:
    app: word-cloud-generator
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
