11-kubernetes/ingress_wcg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: sites.test.local
      http:
        paths:
          - path: /wcg(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wcg-service
                port:
                  number: 8888
